--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: 0;
+  list-style: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+:root {
+  --primary-color: #1976d2;
+  --body-color: #fff;
+  --text-menu: #fff;
+  --text-body: #4b4b4b;
+}
+:root .dark-theme {
+  --primary-color: #0d47a1;
+  --body-color: #4b4b4b;
+  --text-menu: #fff;
+  --text-body: #fff;
+}
+
+body {
+  background-color: var(--body-color);
+}
